fix vertical alignment menu

--- a/src/styles/index-sass/index.scss
+++ b/src/styles/index-sass/index.scss
@@ -200,6 +200,7 @@ h2 {
     background-color: $secondary-2;
     padding-top: 5rem;
     font-size: 2rem;
+    justify-content: center;
     &.active {
       opacity: 1;
       top: 0;
